# auto-heroic-categories

./: .gitignore  README.md  env_check.py  env_example  env_exaple  game_library.py  get_categories.py  get_categories_for_game.py  get_game_modes.py  get_token.py  heroic_categories.py  metacritic.py  pyproject.toml  requirements.txt  run.sh
